<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="user">USER</string>
    <string name="username">UserName</string>
    <string name="TypeYourPwd">TypeYourPwd</string>
    <string name="expensemanager">ExpenseManager</string>
    <string name="loginL">Login</string>
    <string name="pwd">Pwd:</string>
    <string name="e_mail">E-mail</string>
    <string name="pwdR">PWD</string>
    <string name="pwdRt">PWD:</string>
    <string name="avatarR">Avatar</string>
    <string name="usernameL">UserName:</string>
    <string name="add_payer">Add Payer</string>
    <string name="descripción">Descripción:</string>
    <string name="seleccionar_data">Seleccionar data</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="textview_a">TextView_a</string>
    <string name="sopa_gmail_com">sopa@gmail.com</string>
    <string name="icon">Icon</string>
    <string name="cantidad">Cantidad:</string>
    <string name="fecha">Fecha:</string>
    <string name="description">Description:</string>
    <string name="date">(10/12/2010)</string>
    <string name="iconIPL">Icon</string>
    <string name="textviewempty">TextView</string>
    <string name="textviewEmpty" />
    <string name="usersurname" />
    <string name="surname">Surname:</string>
    <string name="type_your_name">type your name</string>
    <string name="editpicture">EditPicture</string>
    <string name="user_picture">user_picture</string>
    <string name="name">Name:</string>
    <string name="img_trip">img_trip</string>
    <string name="btn_edit_img_trip">btn_edit_img_trip</string>
    <string name="amount">Amount</string>
    <string name="pagador">Pagador</string>
    <string name="payer_spinner">payer_spinner</string>
    <string name="Icon">Icon</string>
    <string name="descipci_n">Descipción</string>
    <string name="_100">100 €</string>
    <string name="_10_12_2010">(10/12/2010)</string>

    <item name="trip_amount" type="id" />
    <item name="list_item_user" type="id" />
    <item name="Upload_user_avatar" type="id" />
</resources>