<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    >

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/Icon"
        app:srcCompat="@drawable/franmento_login" />

    <LinearLayout
        android:layout_width="232dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="3dp"
        android:orientation="vertical"
        android:layout_toEndOf="@id/user_avatar"
        >

        <TextView
            android:id="@+id/text_View_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:gravity="center_vertical"
            android:text="@string/descipci_n"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_100"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:gravity="center_vertical"
            android:text="@string/_10_12_2010"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>